# aura

./: .gitignore  AI_ENGINE.md  ARCHITECTURE.md  AURA_MASTER_BLUEPRINT.md  Cargo.toml  DESIGN_SYSTEM.md  HOT_SWAP.md  README.md  SECURITY.md
.github/workflows/: aura-build.yml
aura-ai/: Cargo.toml
aura-ai/src/: lib.rs
aura-app/: Cargo.toml  tauri.conf.json
aura-app/public/: index.html
aura-app/src/: hot_swap.rs  lib.rs  main.rs
aura-app/src-tauri/: tauri.conf.json
aura-app/src-tauri/icons/: aura.icns
aura-engine/: Cargo.toml
aura-engine/src/: lib.rs
aura-net/: Cargo.toml
aura-net/src/: lib.rs
aura-silo/: Cargo.toml
aura-silo/src/: lib.rs  schema.sql
aura-ui/: Cargo.toml  build.rs
aura-ui/src/: lib.rs
aura-ui/ui/: address-ghost.slint  breathe-overlay.slint  command-bar.slint  constellation.slint  main.slint  status-bar.slint  tokens.slint
