[workspace]
members = [
    "aura-app",
    "aura-engine",
    "aura-ui",
    "aura-silo",
    "aura-ai",
    "aura-net",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.88.0"

[workspace.dependencies]
# Core
tauri            = { version = "2" }
tauri-build      = { version = "2" }
servo            = "0.1.0"
libloading       = "0.9"
tokio            = { version = "1", features = ["full"] }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"

# UI
slint            = "1.16"

# Security / Silo
rusqlite         = { version = "0.39", features = ["bundled"] }
aes-gcm          = "0.10"
sha2             = "0.11"
ed25519-dalek    = "2"
rand             = "0.9"
hex              = "0.4"
keyring          = "3"

# AI
candle-core      = { git = "https://github.com/huggingface/candle" }
candle-nn        = { git = "https://github.com/huggingface/candle" }
candle-transformers = { git = "https://github.com/huggingface/candle" }
hf-hub           = { version = "0.5", features = ["tokio"] }
tokenizers       = "0.22"
scraper          = "0.26"

# Network / Adblock
adblock          = { version = "0.12", default-features = false, features = ["embedded-domain-resolver", "resource-assembler"] }
reqwest          = { version = "0.13", features = ["rustls-tls"], default-features = false }
url              = "2"

# Utilities
once_cell        = "1"
thiserror        = "2"
tracing          = "0.1"
tracing-subscriber = "0.3"
dirs             = "6"
semver           = "1"
image            = "0.25"

[patch.crates-io]
# Pin rmp to 0.8.11 to fix breakage in rmp-serde 0.15.x
rmp = { git = "https://github.com/3Hren/msgpack-rust", tag = "rmp/v0.8.11" }
