[package]
name = "aura-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
hf-hub = { workspace = true }
tokenizers = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
scraper = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
candle-core = { workspace = true } # Without Metal on Android
