[package]
name = "aura-ai"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
hf-hub = { workspace = true }
tokenizers = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
scraper = { workspace = true }
aura-net = { path = "../aura-net" }
