[package]
name = "aura-engine"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
servo = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
libloading = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
