[package]
name = "aura-engine"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
servo = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
libloading = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
wgpu = "22.1"
raw-window-handle = "0.6"
libc = "0.2"
euclid = "0.22"
dpi = "0.1"
surfman = "0.11"
gleam = "0.15"
glow = "0.17"

[lib]
name = "aura_engine"
crate-type = ["cdylib", "rlib"]
