[package]
name = "aura-net"
version = "0.1.0"
edition = "2021"

[dependencies]
adblock = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
