[package]
name = "aura-net"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
adblock = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
