[package]
name = "aura-ui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
slint = { workspace = true }
image = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
